--- a/requirements.txt
+++ b/requirements.txt
@@ -20,16 +20,16 @@ django-environ==0.9.0
 django-paypal==2.0
 djangorestframework==3.13.1
 drf-stripe==1.2.6
-drf-stripe-subscription==1.1.11
+
 drf-yasg==1.21.0
 exceptiongroup==1.0.0
 filelock==3.7.1
 firebase-admin==5.2.0
-gevent==22.10.1
-geventhttpclient==2.0.8
-greenlet==1.1.3.post0
-grpcio==1.47.0
-grpcio-status==1.47.0
+# gevent==22.10.1
+# geventhttpclient==2.0.8
+# greenlet==1.1.3.post0
+# grpcio==1.47.0
+# grpcio-status==1.47.0
 gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
@@ -88,13 +88,13 @@ zope.event==4.5.0
 zope.interface==5.5.0
 
 
-azure-common==1.1.28
-azure-core==1.26.1
-azure-keyvault-secrets==4.6.0
-azure-mgmt-core==1.3.2
-azure-mgmt-storage==21.0.0
-azure-storage-blob==2.1.0
-azure-storage-common==2.1.0
-# django-storages
-django-storages-azure==1.6.8
-# azure-storage-blob
+# azure-common==1.1.28
+# azure-core==1.26.1
+# azure-keyvault-secrets==4.6.0
+# azure-mgmt-core==1.3.2
+# azure-mgmt-storage==21.0.0
+# azure-storage-blob==2.1.0
+# azure-storage-common==2.1.0
+# # django-storages
+# django-storages-azure==1.6.8
+# # azure-storage-blob
